--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
 .App {
   text-align: center;
+  font-family: 'Orbitron', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pageContents {
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  margin: 50px;
+  gap: 20px;
+}
+
+.horizontallyCentered {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
+.logoBox {
+  width: 275px;
+  height: 75px;
+  background-color: rgba(35, 35, 35, 0.7); /* Grey with 50% opacity */
+  border-radius: 10px; /* Adjust as needed */
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  color: "#fff";
 }
 
-.App-link {
-  color: #61dafb;
+.socials {
+  margin-top: 80px;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  gap: 20px
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.socialBox {
+  width: 40px;
+  height: 40px;
+  background-color: rgba(35, 35, 35, 0.7); /* Grey with 50% opacity */
+  border-radius: 10px; /* Adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  color: "#fff";
+}
+
+.caBox {
+  background-color: rgba(35, 35, 35, 0.7); /* Grey with 50% opacity */
+  width: 500px;
+  height: 30px;
+  border-radius: 10px; /* Adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  color: "#fff";
+}
+
+.descriptionBox {
+  background-color: rgba(35, 35, 35, 0.7); /* Grey with 50% opacity */
+  width: 500px;
+  height: 340px;
+  border-radius: 10px; /* Adjust as needed */
+  padding: 10px;
+}
+
+.subtitleBox {
+  height: 75px;
+}
+
+.drawConstellationBox {
+  background-color: rgba(35, 35, 35, 0.7); /* Grey with 50% opacity */
+  border-radius: 10px; /* Adjust as needed */
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+}
+
+.shareConstellationBox {
+  background-color: rgba(35, 35, 35, 0.7); /* Grey with 50% opacity */
+  border-radius: 10px; /* Adjust as needed */
+  width: 500px;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
+}
+
+.logoBoxMini {
+  margin-top: 10px;
+  width: 200px;
+  height: 50px;
+  border-radius: 10px; /* Adjust as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: "#fff";
+}
+
+.inputBox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  color: "#fff";
+  gap: 10px; /* Ensure some space between the input field and button */
 }
